--- a/IntentsPractice/app/src/main/res/layout/activity_main.xml
+++ b/IntentsPractice/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,14 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".presentationlayer.controllers.activities.MainActivity">
 
-    <TextView
+    <Button
+            android:text="Web"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:id="@+id/main_btWeb" android:layout_marginTop="140dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="164dp"/>
 
 </android.support.constraint.ConstraintLayout>
