--- a/IntentsPractice/app/src/main/res/layout/activity_web.xml
+++ b/IntentsPractice/app/src/main/res/layout/activity_web.xml
@@ -7,4 +7,27 @@
         android:layout_height="match_parent"
         tools:context=".presentationlayer.controllers.activities.WebActivity">
 
+    <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/web_et_web" android:layout_marginTop="132dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="96dp"
+            app:layout_constraintStart_toStartOf="parent"/>
+    <Button
+            android:text="Navegar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/web_bt_navegar"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="160dp" android:layout_marginTop="52dp"
+            app:layout_constraintTop_toBottomOf="@+id/web_et_web"/>
+    <Button
+            android:text="Buscar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/web_bt_buscar" android:layout_marginTop="52dp"
+            app:layout_constraintTop_toBottomOf="@+id/web_bt_navegar" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="160dp"/>
 </android.support.constraint.ConstraintLayout>
