--- a/IntentsPractice/app/src/main/res/layout/activity_gps.xml
+++ b/IntentsPractice/app/src/main/res/layout/activity_gps.xml
@@ -7,4 +7,19 @@
         android:layout_height="match_parent"
         tools:context=".presentationlayer.controllers.activities.GpsActivity">
 
+    <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/gps_et_search" android:layout_marginTop="96dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="80dp"
+            app:layout_constraintStart_toStartOf="parent"/>
+    <Button
+            android:text="Localizar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/gps_bt_localizar" android:layout_marginTop="108dp"
+            app:layout_constraintTop_toBottomOf="@+id/gps_et_search" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="140dp"/>
 </android.support.constraint.ConstraintLayout>
