--- a/IntentsPractice/app/src/main/res/layout/activity_dialer.xml
+++ b/IntentsPractice/app/src/main/res/layout/activity_dialer.xml
@@ -7,4 +7,120 @@
         android:layout_height="match_parent"
         tools:context=".presentationlayer.controllers.activities.DialerActivity">
 
+    <TableLayout android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:id="@+id/dialer_tlButtons"
+                 android:layout_marginStart="52dp"
+                 app:layout_constraintStart_toStartOf="parent"
+                 app:layout_constraintTop_toBottomOf="@+id/dialer_etPhoneNUmber" android:layout_marginTop="36dp">
+        <TableRow android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:id="@+id/dialer_tlButtons_row1">
+            <Button android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="1"
+                    android:id="@+id/dialer_btNumber1"
+                    android:layout_column="0">
+
+            </Button>
+            <Button android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="2"
+                    android:id="@+id/dialer_btNumber2"
+                    android:layout_column="1">
+
+            </Button>
+            <Button android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="3"
+                    android:id="@+id/dialer_btNumber3"
+                    android:layout_column="2">
+
+            </Button>
+        </TableRow>
+        <TableRow android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:id="@+id/dialer_tlButtons_row2">
+            <Button android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="4"
+                    android:id="@+id/dialer_btNumber4"
+                    android:layout_column="0">
+
+            </Button>
+            <Button android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="5"
+                    android:id="@+id/dialer_btNumber5"
+                    android:layout_column="1">
+
+            </Button>
+            <Button android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="6"
+                    android:id="@+id/dialer_btNumber6"
+                    android:layout_column="2">
+
+            </Button>
+        </TableRow>
+        <TableRow android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:id="@+id/dialer_tlButtons_row3">
+            <Button android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="7"
+                    android:id="@+id/dialer_btNumber7"
+                    android:layout_column="0">
+
+            </Button>
+            <Button android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="8"
+                    android:id="@+id/dialer_btNumber8"
+                    android:layout_column="1">
+
+            </Button>
+            <Button android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="9"
+                    android:id="@+id/dialer_btNumber9"
+                    android:layout_column="2">
+
+            </Button>
+        </TableRow>
+        <TableRow android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:id="@+id/dialer_tlButtons_row4">
+            <ImageButton android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@android:drawable/ic_menu_call"
+                    android:id="@+id/dialer_btCall"
+                    android:layout_column="0">
+
+            </ImageButton>
+            <Button android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0"
+                    android:id="@+id/dialer_btNumber0"
+                    android:layout_column="1">
+
+            </Button>
+            <ImageButton android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@android:drawable/ic_menu_search"
+                    android:id="@+id/dialer_btContactos"
+                    android:layout_column="2">
+
+            </ImageButton>
+        </TableRow>
+    </TableLayout>
+    <es.pue.intentspractice.presentationlayer.controllers.widgets.EditTextNoKB
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="phone"
+            android:ems="10"
+            android:id="@+id/dialer_etPhoneNUmber" android:layout_marginTop="88dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="76dp"
+            app:layout_constraintStart_toStartOf="parent" android:autofillHints=""/>
+
 </android.support.constraint.ConstraintLayout>
