--- a/IntentsPractice/app/src/main/res/layout/activity_contacts.xml
+++ b/IntentsPractice/app/src/main/res/layout/activity_contacts.xml
@@ -7,4 +7,12 @@
         android:layout_height="match_parent"
         tools:context=".presentationlayer.controllers.activities.ContactsActivity">
 
+    <ListView
+            android:layout_width="395dp"
+            android:layout_height="715dp"
+            app:layout_constraintTop_toTopOf="parent" android:id="@+id/contacts_lvContacts"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"/>
 </android.support.constraint.ConstraintLayout>
