--- a/Eventos/app/src/main/res/layout/activity_main.xml
+++ b/Eventos/app/src/main/res/layout/activity_main.xml
@@ -6,14 +6,26 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".presentationLayer.controllers.activities.MainActivity">
-
-    <TextView
+    <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-
+            android:id="@+id/main_btAsistencia" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="128dp"
+            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/main_etDorsal"
+            android:text="Iniciar Actividad"/>
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/main_btParar" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="128dp"
+            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/main_btAsistencia"
+            android:text="Parar Actividad"/>
+    <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/main_etDorsal" android:layout_marginTop="264dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="96dp"
+            app:layout_constraintStart_toStartOf="parent"/>
 </android.support.constraint.ConstraintLayout>
