--- a/Zoo/app/src/main/res/layout/fragment_blank_fragment2.xml
+++ b/Zoo/app/src/main/res/layout/fragment_blank_fragment2.xml
@@ -9,5 +9,6 @@
             android:layout_width="0dp"
             android:layout_height="0dp" android:id="@+id/recyclerView_items"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="64dp"/>
 </android.support.constraint.ConstraintLayout>
