--- a/Zoo/app/src/main/res/layout/item_nombre.xml
+++ b/Zoo/app/src/main/res/layout/item_nombre.xml
@@ -1,12 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+              android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
 
-    <TextView
-            android:text="TextView"
+    <ImageView
+            android:id="@+id/textView_avatar"
+            android:layout_width="@dimen/avatar_width"
+            android:layout_height="@dimen/avatar_height"
+            android:src="@drawable/avatar"/>
+
+    <LinearLayout
+            android:id="@+id/layout_nombre_apellido"
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView_nombre"/>
+            android:layout_height="wrap_content">
+        <TextView
+                android:id="@+id/textView_nombre"
+                android:text="TextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        <TextView
+                android:id="@+id/textView_apellidos"
+                android:text="TextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+    </LinearLayout>
 </LinearLayout>
