--- a/NavegadorWeb/app/src/main/res/layout/content_main.xml
+++ b/NavegadorWeb/app/src/main/res/layout/content_main.xml
@@ -16,6 +16,13 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" android:id="@+id/tvServiceDestroyed"/>
+    <Button
+            android:text="Start service"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/bt_start_service" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="140dp"/>
 
 </android.support.constraint.ConstraintLayout>
