--- a/NavegadorWeb/app/src/main/res/layout/content_main.xml
+++ b/NavegadorWeb/app/src/main/res/layout/content_main.xml
@@ -16,13 +16,34 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:id="@+id/tvServiceDestroyed"/>
+            app:layout_constraintTop_toTopOf="parent" android:id="@+id/tvServiceDestroyed"
+            app:layout_constraintVertical_bias="0.263"/>
     <Button
             android:text="Start service"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/bt_start_service" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="140dp"/>
+            android:id="@+id/bt_start_service"
+            app:layout_constraintTop_toBottomOf="@+id/tvServiceDestroyed" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="140dp" android:layout_marginTop="108dp"/>
+    <Button
+            android:text="Bind service"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/bt_bind_service" android:layout_marginTop="52dp"
+            app:layout_constraintTop_toBottomOf="@+id/tvJob" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="148dp"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvJob" android:layout_marginTop="56dp"
+            app:layout_constraintTop_toBottomOf="@+id/bt_start_service" android:text="Suma"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="184dp"/>
+    <Button
+            android:text="Sumar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/bt_sumar" android:layout_marginTop="24dp"
+            app:layout_constraintTop_toBottomOf="@+id/bt_bind_service" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="156dp"/>
 
 </android.support.constraint.ConstraintLayout>
